# l3gion_utils

./: Cargo.toml
src/: atlas_gen.rs  bytes.rs  lib.rs  reader.rs  writer.rs
src/audio_codec/: decoder.rs  encoder.rs  error.rs  mod.rs  sample.rs
src/audio_codec/wav/: decoder.rs  encoder.rs  mod.rs  reader.rs  writer.rs
testing/: Cargo.toml
